--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,25 +1,25 @@
 :root {
-  --dark-blue: #323243;
+  --dark-blue: #000000;
 }
 
 .font {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif !important;
 }
 
 .f400 {
-  font-weight: 400;
+  font-weight: 400 !important;
 }
 
 .f500 {
-  font-weight: 500;
+  font-weight: 500 !important;
 }
 
 .f700 {
-  font-weight: 700;
+  font-weight: 700 !important;
 }
 
 .f900 {
-  font-weight: 900;
+  font-weight: 900 !important;
 }
 
 body {
@@ -40,7 +40,7 @@ table {
 
 td,
 th {
-  text-align: center;
+  text-align: left;
   padding: 10px 0px;
 }
 
@@ -55,8 +55,9 @@ th {
 }
 
 .total {
-  font-size: 150%;
-  text-decoration: underline;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .form {
@@ -70,8 +71,7 @@ th {
   overflow: auto;
   width: 90%;
   border-radius: 25px;
-  background-color: white;
-  color: black;
+  color: white;
   padding: 25px;
   position: absolute;
   bottom: 20px;
