--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,12 +32,32 @@ body {
 .myChart {
   margin-left: auto !important;
   margin-right: auto !important;
-  margin-top: 80px;
+  margin-top: 100px;
+  border: 2px solid white;
+  border-radius: 20px;
 }
 
 .welcome {
-  padding-top: 38px;
+  padding-top: 41px;
   font-size: 28px;
+  position: relative;
+}
+
+.total-amount {
+  position: absolute;
+  bottom: -80px;
+  left: 50px;
+}
+
+.dollar {
+  position: relative;
+  top: 10px;
+  font-size: 25px;
+}
+
+.total-font {
+  font-size: 10px;
+  opacity: 70%;
 }
 
 button,
