--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ body {
   font-size: 120%;
   background-color: var(--dark-blue);
   color: white;
+  padding-bottom: 25px;
 }
 
 .myChart {
@@ -54,6 +55,17 @@ body {
   border-radius: 50px;
   position: relative;
   top: 40px;
+}
+
+.tableme {
+  height: 250px;
+  background-color: rgb(245, 245, 245);
+  margin-top: 30px;
+  border-radius: 50px;
+  display: none;
+  width: 92%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .welcome {
@@ -147,5 +159,9 @@ th {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .tableme {
+    display: block;
   }
 }
