--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,14 @@ body {
   display: none;
 }
 
+.real-table {
+  color: var(--dark-blue);
+  width: 85%;
+  margin: auto;
+  font-size: 15px;
+  display: none !important;
+}
+
 .time-year {
   background-color: #ffdc74;
   padding: 12px 20px;
@@ -66,6 +74,7 @@ body {
   width: 92%;
   margin-left: auto;
   margin-right: auto;
+  color: var(--dark-blue);
 }
 
 .welcome {
@@ -107,7 +116,7 @@ table {
 td,
 th {
   text-align: left;
-  padding: 10px 0px;
+  padding: 10px 100px;
 }
 
 .error {
@@ -162,6 +171,10 @@ th {
   }
 
   .tableme {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
   }
 }
