--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,19 @@ body {
   top: 40px;
 }
 
+.open {
+  background-color: rgb(250, 250, 250);
+  padding: 12px 20px;
+  font-size: 15px;
+  margin: auto;
+  border-radius: 50px;
+  position: relative;
+  top: 40px;
+  width: 150px;
+  color: #28242c;
+  cursor: pointer;
+}
+
 .tableme {
   height: 250px;
   background-color: rgb(250, 250, 250);
@@ -194,10 +207,22 @@ th {
   display: none;
 }
 
+.time-year {
+  display: none;
+}
+
+.view {
+  display: block;
+}
+
 @media screen and (max-width: 825px) {
   .myChart {
     border: none;
     border-radius: 0px;
+  }
+
+  .view {
+    display: none;
   }
 
   .new-trans {
@@ -208,8 +233,22 @@ th {
 }
 
 @media screen and (max-width: 550px) {
+  .open {
+    display: none;
+  }
+
+  .time-year {
+    display: block;
+  }
+
   .tableme {
     display: block;
+  }
+
+  .new-trans {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
