--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,13 @@
   border: 1px solid black;
 }
 
+::-moz-selection {
+  background: white;
+}
+::selection {
+  background: white;
+}
+
 .font {
   font-family: nunito-sans, sans-serif !important;
   opacity: 95%;
@@ -80,6 +87,12 @@ body {
   width: 150px;
   color: #28242c;
   cursor: pointer;
+  transition: all 100ms ease-in-out;
+}
+
+.open:hover {
+  background-color: rgba(250, 250, 250, 0.103);
+  color: white !important;
 }
 
 .tableme {
