--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,9 @@ body {
   background-color: rgb(250, 250, 250);
   padding: 12px 20px;
   font-size: 15px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
   border-radius: 50px;
   position: relative;
   top: 40px;
