--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,8 +110,41 @@ body {
   color: var(--dark-blue);
 }
 
+.desk-table {
+  height: 250px;
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(8.5px);
+  -webkit-backdrop-filter: blur(8.5px);
+  box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.068);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.808);
+  border-radius: 30px;
+  opacity: 0%;
+  position: absolute;
+  left: 50%;
+  top: 250px;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 400px;
+  padding: 25px;
+  color: white;
+  transition: all 200ms ease-in-out;
+}
+
+.block {
+  opacity: 100%;
+}
+
 .title {
   border-bottom: 2px solid var(--dark-blue);
+  padding-bottom: 8px;
+  font-size: 20px;
+  width: 120px;
+  margin: auto;
+}
+
+.title2 {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.822);
   padding-bottom: 8px;
   font-size: 20px;
   width: 120px;
@@ -245,6 +278,10 @@ th {
     align-items: center;
     justify-content: center;
   }
+
+  .desk-table {
+    top: 220px;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -264,6 +301,10 @@ th {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .desk-table {
+    display: none;
   }
 }
 
