--- a/public/css/style.css
+++ b/public/css/style.css
@@ -89,6 +89,8 @@ body {
   -webkit-backdrop-filter: blur(8.5px);
   box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.068);
   display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .open {
@@ -251,7 +253,11 @@ th {
 .form {
   margin-top: 25px;
   width: 100%;
-  display: none;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .transactions {
