--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,7 +87,6 @@ body {
   background: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(8.5px);
   -webkit-backdrop-filter: blur(8.5px);
-  box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.068);
   display: none;
   justify-content: center;
   align-items: center;
@@ -250,6 +249,18 @@ th {
   display: none;
 }
 
+.close {
+  position: absolute;
+  top: 70px;
+  width: 25px;
+  right: 50px;
+  cursor: pointer;
+  transition: all 200ms ease-in-out;
+}
+
+.close:hover {
+  transform: rotate(90deg);
+}
 .form {
   margin-top: 25px;
   width: 100%;
