--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,14 +85,24 @@ body {
   bottom: 0;
   left: 0;
   background: rgba(255, 255, 255, 0.15);
-  backdrop-filter: blur(8.5px);
-  -webkit-backdrop-filter: blur(8.5px);
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
   display: none;
   justify-content: center;
   align-items: center;
 }
 
-.open {
+.input-yay {
+  padding: 14px;
+  border: none;
+  margin: 10px 0px;
+  border-radius: 50px;
+  font-size: 15px;
+  text-align: center;
+}
+
+.open,
+.button-new {
   background-color: rgb(250, 250, 250);
   padding: 12px 20px;
   font-size: 15px;
@@ -105,10 +115,16 @@ body {
   width: 150px;
   color: #28242c;
   cursor: pointer;
+  border: none !important;
   transition: all 100ms ease-in-out;
 }
 
 .open:hover {
+  background-color: rgba(250, 250, 250, 0.103);
+  color: white !important;
+}
+
+.button-new:hover {
   background-color: rgba(250, 250, 250, 0.103);
   color: white !important;
 }
@@ -234,6 +250,7 @@ th {
 
 .error {
   color: red;
+  display: none !important;
 }
 
 .wrapper {
